<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mobile.com.tarifeogren.StartupActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:elevation="5dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp"
                    style="@style/ViewStyle">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/operator"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/operator_name_text_view"
                        android:textStyle="bold"/>

                </LinearLayout>

                <TextView
                    style="@style/ViewStyle"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/remained_tariff_mail"/>

                <EditText
                    android:id="@+id/mail_edit_text"
                    style="@style/ViewStyle"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/receiver_msg_mail"
                    android:inputType="textEmailAddress"
                    android:maxLength="32"/>

                <TextView
                    style="@style/ViewStyle"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/optional_info_edit_text"/>

                <EditText
                    android:id="@+id/optional_info_edit_text"
                    style="@style/ViewStyle"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/user_phone_info"
                    android:inputType="text"
                    android:maxLength="30"/>

                <TextView
                    style="@style/ViewStyle"
                    android:layout_marginTop="16dp"
                    android:text="@string/interval"/>

                <Spinner
                    android:id="@+id/time_interval_spinner"
                    style="@style/ViewStyle"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="12dp"
                    android:entries="@array/time_interval"
                    />

                <Button
                    android:id="@+id/save_and_exit"
                    style="@style/ViewStyle"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="10dp"
                    android:onClick="onClick"
                    android:text="@string/save_exit"/>

                <TextView
                    style="@style/ViewStyle"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/only_once"/>

                <Button
                    android:id="@+id/demo_button"
                    style="@style/ViewStyle"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="8dp"
                    android:onClick="onClick"
                    android:text="@string/demo_button"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>